--- a/src/components/PasswordBox.css
+++ b/src/components/PasswordBox.css
@@ -58,8 +58,7 @@
 }
 
 .password-box .submit {
-    margin-top: -8rem;
-    margin-bottom: 0.75rem;
+    margin: -8rem auto 0.75rem;
     opacity: 0;
     transition:
         transform 450ms cubic-bezier(.25,0,0,1), /* From @nimiq/style */
